--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,7 +21,10 @@
       "purpose": "any maskable"
     }
   ],
-  "categories": ["education", "productivity"],
+  "categories": [
+    "education",
+    "productivity"
+  ],
   "screenshots": [],
   "shortcuts": [
     {
